discovery para align fix

--- a/components/about/discovery/discovery.css
+++ b/components/about/discovery/discovery.css
@@ -55,7 +55,7 @@
     }
 
     .about-place p {
-        font-size: 2rem;
+        font-size: 1.8rem;
         text-align: justify;
     }
 
@@ -88,8 +88,8 @@
 
     .about-place p {
         margin: 20px 0;
-        font-size: 1.8rem;
-        text-align: justify;
+        font-size: 1.2rem;
+        text-align: left;
     }
 
     .about-place img {
